--- a/MYMETA.yml
+++ b/MYMETA.yml
@@ -6,6 +6,8 @@ build_requires:
   ExtUtils::MakeMaker: 6.59
   Test::Fatal: 0
   Test::More: 0.88
+  Test::Requires: 0
+  Test::Warn: 0.2
 configure_requires:
   ExtUtils::MakeMaker: 6.59
 dynamic_config: 0
